Showing categories in the view

--- a/app/views/store.html
+++ b/app/views/store.html
@@ -1,1 +1,7 @@
-<p>This is the store view.</p>
+<h1>Categories</h1>
+
+<ul>
+  <li ng-repeat="cat in categories">
+    <a ng-href="#/category/{{cat.id}}">{{cat.title}}</a>
+  </li>
+</ul>
