--- a/app/views/category.html
+++ b/app/views/category.html
@@ -1,1 +1,6 @@
-<p>This is the category view.</p>
+<h1>{{category.title}}</h1>
+<p>{{category.id}}</p>
+
+<ul>
+  <li ng-repeat="prod in products"><a ng-href="#/product/{{prod.id}}">{{prod.title}}</a></li>
+</ul>
