--- a/app/views/category.html
+++ b/app/views/category.html
@@ -1,6 +1,4 @@
-<h1>{{category.title}}</h1>
-<p>{{category.id}}</p>
-
+<h1>{{cat.title}}</h1>
 <ul>
   <li ng-repeat="prod in products"><a ng-href="#/product/{{prod.id}}">{{prod.title}}</a></li>
 </ul>
