--- a/app/views/category.html
+++ b/app/views/category.html
@@ -1,4 +1,4 @@
-<h1>{{cat.title}}</h1>
+<h1>{{_category.title}}</h1>
 <ul>
-  <li ng-repeat="prod in products"><a ng-href="#/product/{{prod.id}}">{{prod.title}}</a></li>
+  <li ng-repeat="prod in _products"><a ng-href="#/product/{{prod.id}}">{{prod.title}}</a></li>
 </ul>
