Importing featured products to the view

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -131,8 +131,9 @@
           <div class="single-product">
             <div class="product-img">
               <a href="product-details.html">
-                <img src="img/products/7.jpg" class="primary-img" alt="Product Image" />
-                <img src="img/products/9.jpg" class="secondary-img" alt="Product Image" />
+                <img ng-src="http:\\www.{{product.images[0].segments.domain}}\{{product.images[0].segments.suffix}}" lass="primary-img" alt="Product Image" />
+                <img ng-if="product.images[1]" ng-src="http:\\www.{{product.images[1].segments.domain}}\{{product.images[1].segments.suffix}}" class="secondary-img" alt="Product Image" />
+                <img ng-if="!product.images[1]" ng-src="http:\\www.{{product.images[0].segments.domain}}\{{product.images[0].segments.suffix}}" class="secondary-img" alt="Product Image" />
               </a>
               <div class="product-overlay"></div>
               <span ng-if="product.sale_price" class="tag sale">sale</span>
@@ -148,117 +149,6 @@
                 <div ng-if="!product.sale_price">
                   <span class="regular-price">{{product.price.data.formatted.with_tax}}</span>
                 </div>
-              </div>
-              <div class="cart-btn-container">
-                <a href="#" class="cart-btn">add to cart</a>
-              </div>
-            </div>
-          </div><!-- /.single-product -->
-        </div>
-        <div class="col-md-3">
-          <div class="single-product">
-            <div class="product-img">
-              <a href="product-details.html">
-                <img src="img/products/3.jpg" class="primary-img" alt="Product Image" />
-                <img src="img/products/2.jpg" class="secondary-img" alt="Product Image" />
-              </a>
-              <div class="product-overlay"></div>
-              <span class="tag sale">sale</span>
-              <a class="quick-view modal-view" href="#" data-toggle="modal" data-target="#productModal"><i class="pe-7s-search"></i></a>
-            </div>
-            <div class="product-info">
-              <h3 class="product-name"><a href="product-details.html">Dog food produts</a></h3>
-              <div class="product-price">
-                <span class="special-price">$<span>35</span>.99</span>
-                <span class="old-price">$<span>40</span>.99</span>
-              </div>
-              <div class="cart-btn-container">
-                <a href="#" class="cart-btn">add to cart</a>
-              </div>
-            </div>
-          </div><!-- /.single-product -->
-        </div>
-        <div class="col-md-3">
-          <div class="single-product">
-            <div class="product-img">
-              <a href="product-details.html">
-                <img src="img/products/6.jpg" class="primary-img" alt="Product Image" />
-                <img src="img/products/12.jpg" class="secondary-img" alt="Product Image" />
-              </a>
-              <div class="product-overlay"></div>
-              <a class="quick-view modal-view" href="#" data-toggle="modal" data-target="#productModal"><i class="pe-7s-search"></i></a>
-            </div>
-            <div class="product-info">
-              <h3 class="product-name"><a href="product-details.html">Dog food produts</a></h3>
-              <div class="product-price">
-                <span class="regular-price">$<span>30</span>.99</span>
-              </div>
-              <div class="cart-btn-container">
-                <a href="#" class="cart-btn">add to cart</a>
-              </div>
-            </div>
-          </div><!-- /.single-product -->
-        </div>
-        <div class="col-md-3">
-          <div class="single-product">
-            <div class="product-img">
-              <a href="product-details.html">
-                <img src="img/products/8.jpg" class="primary-img" alt="Product Image" />
-                <img src="img/products/1.jpg" class="secondary-img" alt="Product Image" />
-              </a>
-              <div class="product-overlay"></div>
-              <span class="tag hot">hot</span>
-              <a class="quick-view modal-view" href="#" data-toggle="modal" data-target="#productModal"><i class="pe-7s-search"></i></a>
-            </div>
-            <div class="product-info">
-              <h3 class="product-name"><a href="product-details.html">Dog food produts</a></h3>
-              <div class="product-price">
-                <span class="special-price">$<span>22</span>.99</span>
-                <span class="old-price">$<span>30</span>.99</span>
-              </div>
-              <div class="cart-btn-container">
-                <a href="#" class="cart-btn">add to cart</a>
-              </div>
-            </div>
-          </div><!-- /.single-product -->
-        </div>
-        <div class="col-md-3">
-          <div class="single-product">
-            <div class="product-img">
-              <a href="product-details.html">
-                <img src="img/products/5.jpg" class="primary-img" alt="Product Image" />
-                <img src="img/products/4.jpg" class="secondary-img" alt="Product Image" />
-              </a>
-              <div class="product-overlay"></div>
-              <a class="quick-view modal-view" href="#" data-toggle="modal" data-target="#productModal"><i class="pe-7s-search"></i></a>
-            </div>
-            <div class="product-info">
-              <h3 class="product-name"><a href="product-details.html">Dog food produts</a></h3>
-              <div class="product-price">
-                <span class="special-price">$<span>35</span>.99</span>
-                <span class="old-price">$<span>40</span>.99</span>
-              </div>
-              <div class="cart-btn-container">
-                <a href="#" class="cart-btn">add to cart</a>
-              </div>
-            </div>
-          </div><!-- /.single-product -->
-        </div>
-        <div class="col-md-3">
-          <div class="single-product">
-            <div class="product-img">
-              <a href="product-details.html">
-                <img src="img/products/12.jpg" class="primary-img" alt="Product Image" />
-                <img src="img/products/6.jpg" class="secondary-img" alt="Product Image" />
-              </a>
-              <div class="product-overlay"></div>
-              <a class="quick-view modal-view" href="#" data-toggle="modal" data-target="#productModal"><i class="pe-7s-search"></i></a>
-            </div>
-            <div class="product-info">
-              <h3 class="product-name"><a href="product-details.html">Dog food produts</a></h3>
-              <div class="product-price">
-                <span class="special-price">$<span>35</span>.99</span>
-                <span class="old-price">$<span>40</span>.99</span>
               </div>
               <div class="cart-btn-container">
                 <a href="#" class="cart-btn">add to cart</a>
